added various tests

--- a/calc_torques/CMakeLists.txt
+++ b/calc_torques/CMakeLists.txt
@@ -16,19 +16,19 @@ set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 #set the default path for built libraries to the "lib" directory
 set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 
+#rosbuild_find_ros_package(trajectory_generator)
+
 #uncomment if you have defined messages
 #rosbuild_genmsg()
 #uncomment if you have defined services
 #rosbuild_gensrv()
 
 #common commands for building c++ executables and libraries
-#rosbuild_add_library(${PROJECT_NAME} src/example.cpp)
-#target_link_libraries(${PROJECT_NAME} another_library)
-#rosbuild_add_boost_directories()
+#rosbuild_add_library(trajectory_generator ${trajectory_generator_PACKAGE_PATH}/src/traj.cpp ${trajectory_generator_PACKAGE_PATH}/src/traj.hpp)
+#target_link_libraries(trajectory_generator ${trajectory_generator_PACKAGE_PATH}/src/traj.cpp ${trajectory_generator_PACKAGE_PATH}/src/traj.hpp)
+rosbuild_add_boost_directories()
 #rosbuild_link_boost(${PROJECT_NAME} thread)
-rosbuild_find_ros_package(trajectory_generator)
-find_package(Eigen REQUIRED)
-include_directories(${Eigen_INCLUDE_DIRS} ${trajectory_generator_PACKAGE_PATH}/src ${trajectory_generator_PACKAGE_PATH}/../YoubotArmModel)
-rosbuild_add_executable(matrix_generator src/m_gen.cpp)
-rosbuild_add_executable(matrix_generator_sym src/m_gen_sym.cpp)
-target_link_libraries(matrix_generator -lrt)
+#include_directories(${trajectory_generator_PACKAGE_PATH}/src)
+rosbuild_add_executable(calc_torques src/calc_tor.cpp)
+#${trajectory_generator_PACKAGE_PATH}/src/traj.cpp
+#target_link_libraries(example ${PROJECT_NAME})
