--- a/timingtest/CMakeLists.txt
+++ b/timingtest/CMakeLists.txt
@@ -26,9 +26,5 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 #target_link_libraries(${PROJECT_NAME} another_library)
 #rosbuild_add_boost_directories()
 #rosbuild_link_boost(${PROJECT_NAME} thread)
-rosbuild_find_ros_package(trajectory_generator)
-find_package(Eigen REQUIRED)
-include_directories(${Eigen_INCLUDE_DIRS} ${trajectory_generator_PACKAGE_PATH}/src ${trajectory_generator_PACKAGE_PATH}/../YoubotArmModel)
-rosbuild_add_executable(matrix_generator src/m_gen.cpp)
-rosbuild_add_executable(matrix_generator_sym src/m_gen_sym.cpp)
-target_link_libraries(matrix_generator -lrt)
+rosbuild_add_executable(timingtest src/timingtest.cpp)
+#target_link_libraries(example ${PROJECT_NAME})
